# frigate-protect-events

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.test.yaml  docker-compose.yaml  pyproject.toml
.github/workflows/: build.yml
config/: config.yaml.example
src/frigate_protect_events/: __main__.py  camera_cache.py  coalesce.py  config.py  db.py  labels.py  models.py  mqtt.py  processor.py  protect_writer.py  snapshot.py  tunnel.py
src/frigate_protect_events.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: conftest.py  protect_schema.sql  test_camera_cache.py  test_coalesce.py  test_config.py  test_integration.py  test_labels.py  test_models.py  test_mqtt.py  test_processor.py  test_protect_writer.py  test_snapshot.py
unraid/: frigate-protect-events.xml
